# mlops-zoomcamp

./: .gitignore  Makefile  pyproject.toml
01-intro/: duration-prediction.ipynb
02-experiment-tracking/: duration-prediction.ipynb  model-registry.ipynb
02-experiment-tracking/running-mlflow-examples/: scenario-1.ipynb  scenario-2.ipynb  scenario-3.ipynb
03-orchestration/3.2/: cat_dog_facts.py
03-orchestration/3.3/: duration_prediction_explore.ipynb  duration_prediction_original.ipynb  orchestrate_pre_prefect.py
03-orchestration/3.4/: orchestrate.py
03-orchestration/3.5/: create_s3_bucket_block.py  orchestrate_s3.py
03-orchestration/3.6/: orchestrate_s3.py
04-deployment/: load_model.ipynb
04-deployment/batch/: score.ipynb  score.py  score_backfill.py
04-deployment/streaming/: lambda_function.py  test_docker.py
04-deployment/web-service/: predict.py  test.py
04-deployment/web-service-mlflow/: predict.py  random-forest.ipynb
05-monitoring/: dummy_metrics_calculation.py  evidently_metrics_calculation.py
06-best-practices/code/: lambda_function.py
06-best-practices/code/tests/: model_test.py
cohorts/2022/01-intro/: homework.ipynb
cohorts/2022/02-experiment-tracking/homework/: hpo.py  preprocess_data.py  register_model.py  train.py
cohorts/2022/03-orchestration/: homework.py  homework_solution.py
cohorts/2022/03-orchestration/code/: model_training.py  orchestration.py  prefect_deploy.py  prefect_flow.py  work-queue.py
cohorts/2022/04-deployment/homework/: batch.py  (+1 more)
cohorts/2023/01-intro/: homework.ipynb
generate/: generate_pages.ipynb
(+30 files in other folders)
